--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,30 @@ dependencies:
     sdk: flutter
 
 
+
+
+    
+    
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.2.1
+  #curved_navigation_bar: ^0.3.7
+  #image_picker: ^0.6.7+22
+  #barcode_widget: ^1.5.0
   geolocator: ^9.0.2
+  geocoding: ^2.0.5
+  #path_provider: ^1.6.27
+  #provider: ^3.0.0
+  #url_launcher: ^5.7.10
+  #cached_network_image: ^2.5.1
+  #get: ^3.24.0
+  location: ^2.3.5
+  
+  http: ^0.13.5
+  
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +84,12 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+     - images/pickup.png
+     - images/destination.png
+  
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
