--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,19 +43,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.2.1
-  #curved_navigation_bar: ^0.3.7
-  #image_picker: ^0.6.7+22
-  #barcode_widget: ^1.5.0
+  flutter_google_places: ^0.3.0
   geolocator: ^9.0.2
   geocoding: ^2.0.5
-  #path_provider: ^1.6.27
-  #provider: ^3.0.0
-  #url_launcher: ^5.7.10
-  #cached_network_image: ^2.5.1
-  #get: ^3.24.0
   location: ^2.3.5
   
   http: ^0.13.5
+
+google_maps_flutter: ^2.0.3
+location: ^4.1.1
+flutter_google_places: ^0.3.0
   
 
 dev_dependencies:
