--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.2.1
-  flutter_google_places: ^0.3.0
+  google_place: ^0.4.7
   geolocator: ^9.0.2
   geocoding: ^2.0.5
   location: ^2.3.5
@@ -52,7 +52,7 @@ dependencies:
 
 google_maps_flutter: ^2.0.3
 location: ^4.1.1
-flutter_google_places: ^0.3.0
+
   
 
 dev_dependencies:
@@ -61,6 +61,7 @@ dev_dependencies:
 
   build_runner: ^2.0.0
   json_serializable: ^6.0.0
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
