--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
 
   assets:
     - json/
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
