--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,11 @@ dependencies:
   google_place: ^0.4.7
   geolocator: ^9.0.2
   geocoding: ^2.0.5
-  location: ^2.3.5
+  location: ^4.4.0
   http: ^0.13.5
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
+  cloud_firestore: ^4.3.1
 
 google_maps_flutter: ^2.0.3
 location: ^4.1.1
@@ -61,6 +64,9 @@ dev_dependencies:
 
   build_runner: ^2.0.0
   json_serializable: ^6.0.0
+
+dependency_overrides:
+  firebase_core_platform_interface: 4.5.2
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
