--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_place: ^0.4.7
   geolocator: ^9.0.2
   geocoding: ^2.0.5
+  location: ^4.4.0
   http: ^0.13.5
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
