--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
+  external_app_launcher: ^3.1.0
 
 google_maps_flutter: ^2.0.3
 location: ^4.4.0
